# quicksight-kb-cli

./: .gitignore  LICENSE  README.md  REQUIRED_IAM_POLICY.json  pyproject.toml  quicksight-kb-cli.py  quicksight_kb_cli.py  requirements.txt
tests/: test_quicksight_kb_cli.py
