[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quicksight-kb-cli"
version = "0.1.0"
description = "CLI for Amazon QuickSight Knowledge Bases (June 2026 API)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AWS New-API Gap Filler"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "boto3>=1.43.25",
]

[project.urls]
Homepage = "https://github.com/Mutaner/quicksight-kb-cli"
Source = "https://github.com/Mutaner/quicksight-kb-cli"

[project.scripts]
quicksight-kb-cli = "quicksight_kb_cli:main"

[tool.setuptools.packages.find]
include = ["quicksight_kb_cli*"]